@@ -26,6 +26,7 @@ import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
 import com.dpw.runner.shipment.services.kafka.dto.KafkaResponse;
 import com.dpw.runner.shipment.services.kafka.producer.KafkaProducer;
+import com.dpw.runner.shipment.services.masterdata.enums.MasterDataType;
 import com.dpw.runner.shipment.services.masterdata.request.CommonV1ListRequest;
 import com.dpw.runner.shipment.services.service.interfaces.IAuditLogService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
@@ -46,6 +47,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -167,7 +170,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         testContainer = jsonTestUtility.getTestContainer();
         testShipment = jsonTestUtility.getTestShipment();
         testPacking = jsonTestUtility.getTestPacking();
@@ -183,7 +186,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    public void testCreate_Success() {
+    void testCreate_Success() {
         ResponseEntity<IRunnerResponse> responseEntity = containerService.create(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -192,7 +195,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    public void testAttachPacks_Success() {
+    void testAttachPacks_Success() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -218,8 +221,8 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    @Disabled
-    public void testAttachPacks_ContainerNotFound() {
+    @Disabled("Skipped")
+    void testAttachPacks_ContainerNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -233,7 +236,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testAttachPacks_PackingNotFound() {
+    void testAttachPacks_PackingNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -250,7 +253,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testUpdate() throws RunnerException, NoSuchFieldException, JsonProcessingException, InvocationTargetException, IllegalAccessException, NoSuchMethodException {
+    void testUpdate() throws RunnerException{
         ResponseEntity<IRunnerResponse> responseEntity = containerService.update(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -265,8 +268,7 @@ class ContainerServiceTest extends CommonMocks {
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn((ContainerResponse) containerResponse);
-
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
         ResponseEntity<IRunnerResponse> responseEntity = containerService.list(commonRequestModel);
 
         assertNotNull(responseEntity);
@@ -281,7 +283,7 @@ class ContainerServiceTest extends CommonMocks {
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn((ContainerResponse) containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         CompletableFuture<ResponseEntity<IRunnerResponse>> responseEntity = containerService.listAsync(request);
 
@@ -314,7 +316,7 @@ class ContainerServiceTest extends CommonMocks {
         ContainerResponse containerResponse = objectMapper.convertValue(testContainer, ContainerResponse.class);
 
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         ResponseEntity<IRunnerResponse> responseEntity = containerService.retrieveById(commonRequestModel);
 
@@ -323,7 +325,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNonNullContainer() {
+    void testCalculateUtilization_WithNonNullContainer() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -337,13 +339,13 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNullContainer() {
+    void testCalculateUtilization_WithNullContainer() {
         Containers resultContainer = containerService.calculateUtilization(null);
         Assertions.assertNull(resultContainer);
     }
 
     @Test
-    public void testCalculateUtilization_WithZeroAllocatedWeight() {
+    void testCalculateUtilization_WithZeroAllocatedWeight() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -357,7 +359,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithZeroAllocatedVolume() {
+    void testCalculateUtilization_WithZeroAllocatedVolume() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.ZERO);
@@ -371,7 +373,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
+    void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
         Containers container = new Containers();
         container.setAllocatedVolume(BigDecimal.valueOf(100));
         container.setAllocatedWeight(BigDecimal.valueOf(1000));
@@ -383,16 +385,16 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateAchieved_AllocatedForSameUnit_Success() {
+    void testCalculateAchieved_AllocatedForSameUnit_Success() {
         testContainer.setId(1L);
         ContainerRequest containerRequest = objectMapper.convertValue(testContainer, ContainerRequest.class);
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(containerRequest);
         ContainerResponse containerResponse = objectMapper.convertValue(containerRequest, ContainerResponse.class);
 
         when(jsonHelper.convertValue(any(ContainerRequest.class), eq(Containers.class))).thenReturn(testContainer);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(commonRequestModel);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(commonRequestModel);
 
         Assertions.assertNotNull(responseEntity);
         assertEquals(responseEntity, ResponseHelper.buildSuccessResponse(containerResponse));
@@ -423,7 +425,7 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.save(any(Containers.class))).thenReturn(testContainer);
         when(producer.getKafkaResponse(any() , anyBoolean())).thenReturn(new KafkaResponse());
         when(jsonHelper.convertToJson(any(KafkaResponse.class))).thenReturn(StringUtils.EMPTY);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         Packing packing = jsonTestUtility.getTestPacking();
         List<Packing> packingList = List.of(packing);
@@ -439,7 +441,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testValidateContainerNumber_Success() {
+    void testValidateContainerNumber_Success() {
         String validContainerNumber = "ABCD123456";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(validContainerNumber);
         Assertions.assertNotNull(responseEntity);
@@ -447,17 +449,9 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testValidateContainerNumber_InvalidLength() {
+    void testValidateContainerNumber_InvalidLength() {
         String invalidLengthContainerNumber = "ABC123";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidLengthContainerNumber);
-        Assertions.assertNotNull(responseEntity);
-        assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
-    }
-
-    @Test
-    public void testValidateContainerNumber_InvalidCharacters() {
-        String invalidCharactersContainerNumber = "1234ABCD56";
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidCharactersContainerNumber);
         Assertions.assertNotNull(responseEntity);
         assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
     }
@@ -467,15 +461,21 @@ class ContainerServiceTest extends CommonMocks {
         ListCommonRequest listCommonRequest = ListCommonRequest.builder().build();
         CommonRequestModel requestModel = CommonRequestModel.buildRequest(listCommonRequest);
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
-        ContainerResponse containerResponse = objectMapper.convertValue(testContainer, ContainerResponse.class);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
-
         var response = containerService.getContainers(requestModel);
         assertNotNull(response);
     }
+    @Test
+    void getContainersWithIncludeColumns() {
+        ListCommonRequest listCommonRequest = ListCommonRequest.builder().includeColumns(List.of("id", "guid", "tenantId", "containerNumber")).build();
+        CommonRequestModel requestModel = CommonRequestModel.buildRequest(listCommonRequest);
+        Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
+        when(containerDao.findAll(any(), any())).thenReturn(page);
+        var response = containerService.getContainers(requestModel);
+        assertNotNull(response);
+    }
     @Test
     void getContainers_Failure() {
         CommonRequestModel requestModel = CommonRequestModel.buildRequest();
@@ -491,7 +491,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenThrow(new RuntimeException());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -503,7 +503,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenReturn(Optional.empty());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -516,7 +516,7 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -529,7 +529,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(new ArrayList<>());
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -545,12 +545,12 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
     @Test
-    void calculateAchievedQuantity_onPackDetach() {
+    void calculateAchievedQuantityOnPackDetach() {
         ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
         request.setContainerId(1L);
         request.setPacksId(List.of(2L));
@@ -559,7 +559,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -573,7 +573,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(new ArrayList<>()));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -587,7 +587,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(null);
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -601,7 +601,7 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
         when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
@@ -620,7 +620,7 @@ class ContainerServiceTest extends CommonMocks {
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
         testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
         when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
@@ -660,7 +660,7 @@ class ContainerServiceTest extends CommonMocks {
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
         testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
         when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
@@ -804,7 +804,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testShipment)));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -815,24 +815,24 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findByGuid(any())).thenReturn(List.of(testContainer));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
 
     @Test
-    void V1ContainerCreateAndUpdate_Failure() throws RunnerException{
+    void V1ContainerCreateAndUpdate_Failure(){
         when(containerDao.findByGuid(any())).thenThrow(new RuntimeException());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2());
-        assertThrows(RuntimeException.class, () -> containerService.V1ContainerCreateAndUpdate(commonRequestModel, false));
+        assertThrows(RuntimeException.class, () -> containerService.v1ContainerCreateAndUpdate(commonRequestModel, false));
     }
 
     @Test
     void V1BulkContainerCreateAndUpdate() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
-        ResponseEntity<IRunnerResponse> responseEntity = spyService.V1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
+        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
+        ResponseEntity<IRunnerResponse> responseEntity = spyService.v1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
         assertNotNull(responseEntity);
     }
 
@@ -840,13 +840,13 @@ class ContainerServiceTest extends CommonMocks {
     void V1BulkContainerCreateAndUpdate_Failure() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doThrow(new RunnerException()).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
+        doThrow(new RunnerException()).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(bulkContainerRequestV2);
-        assertThrows(RuntimeException.class, () -> spyService.V1BulkContainerCreateAndUpdate(commonRequestModel));
+        assertThrows(RuntimeException.class, () -> spyService.v1BulkContainerCreateAndUpdate(commonRequestModel));
     }
 
     @Test
-    void testExportContainers_Success() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Success() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -861,7 +861,7 @@ class ContainerServiceTest extends CommonMocks {
 
         Optional<ConsolidationDetails> consol = Optional.of(consolidationDetails);
         when(consolidationDetailsDao.findById(1L)).thenReturn(consol);
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
 
         List<String> contHeaders = new ArrayList<>();
         contHeaders.add("containerNumber");
@@ -871,7 +871,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleIdNull() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_ConsoleIdNull(){
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setFreeTimeNoOfDaysDetention(3L);
@@ -880,7 +880,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleNotFound() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_ConsoleNotFound() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -891,7 +891,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_EmptyContainers() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_EmptyContainers() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -907,7 +907,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_NullContainers() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_NullContainers() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -1008,7 +1008,7 @@ class ContainerServiceTest extends CommonMocks {
 
     @Test
     void calculateAchieved_AllocatedForSameUnit_failure() {
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(null);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(null);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -1075,7 +1075,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void list_Failure() throws Exception{
+    void list_Failure(){
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.list(commonRequestModel);
         assertNotNull(responseEntity);
@@ -1083,12 +1083,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainers_NullReq() throws Exception {
+    void uploadContainers_NullReq() {
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(null));
     }
 
     @Test
-    void uploadContainers_NullConsoleId() throws Exception {
+    void uploadContainers_NullConsoleId(){
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
     }
@@ -1199,6 +1199,104 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
+    void uploadContainers_ContainerNumberAlreadyExists() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(false);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHandlingInfo(null);
+        Containers containers = new Containers();
+        containers.setGuid(UUID.randomUUID());
+        containers.setContainerNumber("CONT0000006");
+        containers.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(containers));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(containers));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_MultipleContainerOwnership() throws IOException {
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_CommodityTypeException() throws IOException {
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setCommodityCode("46321");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
     void uploadContainers_SEA() throws Exception{
         BulkUploadRequest request = new BulkUploadRequest();
         request.setConsolidationId(1L);
@@ -1237,6 +1335,44 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
+    void uploadContainers_SEA2() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(false);
+        testContainer.setIsShipperOwned(true);
+        testContainer.setHazardous(false);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode(null);
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
     void uploadContainers_AIR() throws Exception{
         BulkUploadRequest request = new BulkUploadRequest();
         request.setConsolidationId(1L);
@@ -1246,7 +1382,7 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setContainerNumber("CONT0000006");
         testContainer.setIsOwnContainer(true);
         testContainer.setIsShipperOwned(false);
-        testContainer.setHazardous(true);
+        testContainer.setHazardous(null);
         testContainer.setIsPart(true);
         testContainer.setContainerStuffingLocation("unloc");
         testContainer.setHazardousUn("hzUn");
@@ -1275,7 +1411,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainers() throws RunnerException{
+    void downloadContainers(){
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1283,7 +1419,6 @@ class ContainerServiceTest extends CommonMocks {
         request.setShipmentId("6");
         when(shipmentDao.findById(any())).thenReturn(Optional.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-//        when(shipmentsContainersMappingDao.findByShipmentId(any()))
         when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(jsonTestUtility.getTestConsolidation()));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
         when(commonUtils.convertToList(anyList(), eq(ContainersExcelModel.class))).thenReturn(List.of(objectMapper.convertValue(testContainer, ContainersExcelModel.class)));
@@ -1291,7 +1426,37 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainerEvents() throws Exception {
+    void downloadContainers2(){
+        HttpServletResponse response = new MockHttpServletResponse();
+        BulkDownloadRequest request = new BulkDownloadRequest();
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        request.setConsolidationId("3");
+        request.setShipmentId("6");
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(consolidationDetailsDao.findById(any())).thenReturn(Optional.empty());
+        assertDoesNotThrow(() -> containerService.downloadContainers(response, request));
+    }
+
+    @Test
+    void downloadContainers3(){
+        HttpServletResponse response = new MockHttpServletResponse();
+        BulkDownloadRequest request = new BulkDownloadRequest();
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        request.setConsolidationId("3");
+        request.setShipmentId("6");
+        ShipmentDetails shipmentDetails1 = testShipment;
+        shipmentDetails1.setDirection(null);
+        ConsolidationDetails consolidationDetails = jsonTestUtility.getTestConsolidation();
+        consolidationDetails.setShipmentType(null);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails1));
+        when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
+        when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(consolidationDetails));
+        when(commonUtils.convertToList(anyList(), eq(ContainersExcelModel.class))).thenReturn(List.of(objectMapper.convertValue(testContainer, ContainersExcelModel.class)));
+        assertDoesNotThrow(() -> containerService.downloadContainers(response, request));
+    }
+
+    @Test
+    void downloadContainerEvents(){
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1311,12 +1476,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainerEvents_Failure() throws Exception {
+    void uploadContainerEvents_Failure() {
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(null));
     }
 
     @Test
-    void uploadContainerEvents_Failure_NullId() throws Exception {
+    void uploadContainerEvents_Failure_NullId() {
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(request));
     }
@@ -1334,7 +1499,7 @@ class ContainerServiceTest extends CommonMocks {
         c2.setContainerNumber("C456");
 
         List<Containers> containersList = Arrays.asList(c1,c2);
-        List<Containers> oldContainers = Arrays.asList(c1);
+        List<Containers> oldContainers = List.of(c1);
 
         V1TenantSettingsResponse v1TenantSettingsResponse = new V1TenantSettingsResponse();
         v1TenantSettingsResponse.setLogicAppIntegrationEnabled(true);
@@ -1356,6 +1521,31 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
+    void testPushContainersToDependentServicesWithEmptyBookingRef() {
+        // Arrange
+        Containers c1 = new Containers();
+        c1.setId(1L);
+        c1.setConsolidationId(1L);
+        c1.setContainerNumber("C123");
+        c1.setShipmentsList(new HashSet<>(Collections.singletonList(ShipmentDetails.builder().bookingReference("").build())));
+        Containers c2 = new Containers();
+        c2.setId(2L);
+        c2.setContainerNumber("C456");
+
+        List<Containers> containersList = Arrays.asList(c1,c2);
+        List<Containers> oldContainers = Arrays.asList(c1);
+
+        V1TenantSettingsResponse v1TenantSettingsResponse = new V1TenantSettingsResponse();
+        v1TenantSettingsResponse.setLogicAppIntegrationEnabled(true);
+        v1TenantSettingsResponse.setTransportOrchestratorEnabled(true);
+        when(commonUtils.getCurrentTenantSettings()).thenReturn(v1TenantSettingsResponse);
+        // Act
+        containerService.pushContainersToDependentServices(containersList, oldContainers);
+        verify(producer, times(0)).produceToKafka(eq("jsonBody"), any(), anyString());
+        verify(sbUtils, times(0)).sendMessagesToTopic(eq(isbProperties), any(), anyList());
+    }
+
+    @Test
     void getByModuleGuidAndModuleType_ValidShipmentGuid_ShouldReturnSuccessResponse() {
         UUID validGuid = UUID.randomUUID();
         // Given
@@ -1365,10 +1555,10 @@ class ContainerServiceTest extends CommonMocks {
         ShipmentDetails shipmentDetails = new ShipmentDetails();
         shipmentDetails.setContainersList(Set.of(new Containers()));
 
-        List<ContainerResponse> containerResponses = List.of(new ContainerResponse());
+       ContainerResponse containerResponse = new ContainerResponse();
 
         when(shipmentDao.findByGuid(validGuid)).thenReturn(Optional.of(shipmentDetails));
-        when(jsonHelper.convertValueToList(any(), eq(ContainerResponse.class))).thenReturn(containerResponses);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(), any())).thenReturn(containerResponse);
 
         // When
         ResponseEntity<IRunnerResponse> response = containerService.getByModuleGuidAndModuleType(moduleGuid, moduleType);
@@ -1388,10 +1578,10 @@ class ContainerServiceTest extends CommonMocks {
         ConsolidationDetails consolidationDetails = new ConsolidationDetails();
         consolidationDetails.setContainersList(List.of(new Containers()));
 
-        List<ContainerResponse> containerResponses = List.of(new ContainerResponse());
+        ContainerResponse containerResponse = new ContainerResponse();
 
         when(consolidationDetailsDao.findByGuid(validGuid)).thenReturn(Optional.of(consolidationDetails));
-        when(jsonHelper.convertValueToList(any(), eq(ContainerResponse.class))).thenReturn(containerResponses);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(), any())).thenReturn(containerResponse);
 
         // When
         ResponseEntity<IRunnerResponse> response = containerService.getByModuleGuidAndModuleType(moduleGuid, moduleType);
@@ -1399,6 +1589,412 @@ class ContainerServiceTest extends CommonMocks {
         // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
+    }
+    @Test
+    void uploadContainers_SEA4() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA5() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA6() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(testShipment));
+        assertThrows(RuntimeException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA7() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.ofNullable(testShipment));
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA8() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("abcd");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(RuntimeException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_AIR2() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(null);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(consolidationService.calculateVolumeWeight(any(), any(), any(), any(), any())).thenReturn(jsonTestUtility.getVolumeWeightChargeable());
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_AIR3() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(null);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach2() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_LITRE);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_MG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach3() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach4() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach5() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_LITRE);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_MG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"1234ABCD56", "ABCD12345A", "ABCD12345%", "aBCD12345%", "ABCD123456%", "ABCD123456A", "ABCD1234561"})  // Runs test for both true and false cases
+    void testValidateContainerNumber_InvalidCharacters(String invalidCharactersContainerNumber) {
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidCharactersContainerNumber);
+        Assertions.assertNotNull(responseEntity);
+        assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
+    }
+
+    @Test
+    void uploadContainers_SEA9() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass1");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(RuntimeException.class ,() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA10() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass1");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    var a = jsonTestUtility.getMasterDataMapWithSameCommodity();
+                    a.remove(MasterDataType.DG_CLASS.getDescription());
+                    masterDataMap.putAll(a);
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
     }
 
 }
